Système de rotation des tuiles